[package]
name = "mpu6886"
version = "0.1.1"
authors = ["oldsheep68@hotmail.com"]
edition = "2021"

description = "Platform agnostic driver for mpu6886 6-axis IMU"
repository = "https://github.com/oldsheep68/mpu6886"
readme = "README.md"
keywords = ["mpu6886", "imu", "embedded", "driver", "accelerometer"]
license = "MIT"

exclude = ["target/*"]

[dependencies]
embedded-hal = "1.0.0"
libm = "0.2.15"
esp-println = { version = "0.15.0" }
[dependencies.nalgebra]
default-features = false
version = "0.34.0"

[dev-dependencies]
i2cdev = "0.6.1"
linux-embedded-hal = "0.4.0"
